// Property Agent domain - relational data model
// Source for https://dbdiagram.io  (paste to render)
//
// Conventions:
//   - surrogate UUID primary keys named `id`
//   - snake_case columns, singular table names
//   - every table carries created_at / updated_at (audit baseline)
//   - timestamps are UTC, timestamptz

Table agent {
  id            uuid        [pk]
  first_name    varchar(80) [not null, note: 'trimmed, non-empty']
  last_name     varchar(80) [not null, note: 'trimmed, non-empty']
  email         citext      [not null, unique, note: 'case-insensitive unique']
  mobile_number varchar(20) [not null, note: 'E.164, e.g. +61412345678']
  created_at    timestamptz [not null, default: `now()`]
  updated_at    timestamptz [not null, default: `now()`]

  checks {
    `char_length(btrim(first_name)) > 0` [name: 'agent_first_name_not_blank']
    `char_length(btrim(last_name)) > 0`  [name: 'agent_last_name_not_blank']
    `email ~ '^[^@[:space:]]+@[^@[:space:]]+\.[^@[:space:]]+$'` [name: 'agent_email_shape']
    `mobile_number ~ '^\+[1-9][0-9]{7,14}$'` [name: 'agent_mobile_e164']
    `updated_at >= created_at` [name: 'agent_updated_after_created']
  }

  Note: 'A property agent. The only entity exposed by the REST API in this exercise.'
}

Table family {
  id         uuid        [pk]
  name       varchar(120)[not null, note: 'household label, e.g. "The Nguyen family"']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  checks {
    `char_length(btrim(name)) > 0` [name: 'family_name_not_blank']
  }

  Note: '''
  The leaseholding household. Exists as its own entity so that
  "all tenants of a property belong to a single family" is enforced by
  structure rather than by a trigger or application check.

  Scope assumption beyond the brief: a family is the household occupying
  ONE current rental property, enforced by UNIQUE (property.family_id).
  Tenancy history is out of scope - see README "Known limitations".
  '''
}

Table property {
  id            uuid         [pk]
  agent_id      uuid         [not null]
  family_id     uuid         [unique, note: 'NULL while vacant; UNIQUE = one current property per family']
  address_line1 varchar(160) [not null]
  address_line2 varchar(160)
  suburb        varchar(80)  [not null]
  state         varchar(40)  [not null]
  postcode      varchar(12)  [not null]
  country_code  char(2)      [not null, default: 'AU']
  created_at    timestamptz  [not null, default: `now()`]
  updated_at    timestamptz  [not null, default: `now()`]

  Indexes {
    agent_id
  }

  checks {
    `char_length(btrim(address_line1)) > 0` [name: 'property_address_not_blank']
  }

  Note: '''
  A rental property managed by exactly one agent.
  family_id is nullable: a property between tenancies has no family.
  Several properties may be vacant at once - UNIQUE treats NULLs as distinct.
  '''
}

Table tenant {
  id            uuid        [pk]
  family_id     uuid        [not null]
  first_name    varchar(80) [not null]
  last_name     varchar(80) [not null]
  email         citext      [unique, note: 'optional; unique when present']
  mobile_number varchar(20)
  is_primary    boolean     [not null, default: false, note: 'primary lease contact']
  created_at    timestamptz [not null, default: `now()`]
  updated_at    timestamptz [not null, default: `now()`]

  Indexes {
    family_id
  }

  checks {
    `char_length(btrim(first_name)) > 0` [name: 'tenant_first_name_not_blank']
    `char_length(btrim(last_name)) > 0`  [name: 'tenant_last_name_not_blank']
  }

  Note: '''
  A person on the lease. Belongs to exactly one family, which may hold
  any number of tenants.

  NOT EXPRESSIBLE IN DBML - see schema.sql:
    CREATE UNIQUE INDEX one_primary_tenant_per_family
      ON tenant (family_id) WHERE is_primary;

  A partial unique index allows at most one primary contact per family.
  It must not be written as UNIQUE (family_id, is_primary): that is valid
  SQL but caps a family at two tenants, contradicting "1 or more tenants".
  '''
}

Table note {
  id           uuid         [pk]
  agent_id     uuid         [not null, note: 'author']
  property_id  uuid         [note: 'NULL = general note, not property-specific']
  category     note_category[not null, default: 'general']
  body         text         [not null, note: 'non-empty']
  due_at       timestamptz  [note: 'set => this note is a reminder']
  completed_at timestamptz  [note: 'set => the reminder is done']
  created_at   timestamptz  [not null, default: `now()`]
  updated_at   timestamptz  [not null, default: `now()`]

  Indexes {
    agent_id
    property_id
  }

  checks {
    `char_length(btrim(body)) > 0` [name: 'note_body_not_blank']
    `completed_at IS NULL OR due_at IS NOT NULL` [name: 'note_completed_requires_due']
    `completed_at IS NULL OR completed_at >= created_at` [name: 'note_completed_after_created']
  }

  Note: '''
  Notes and reminders share one table. A reminder is a note that has a
  due_at. completed_at may only be set when due_at is set.

  NOT EXPRESSIBLE IN DBML - see schema.sql, the outstanding-reminder queue:
    CREATE INDEX agent_reminder_queue ON note (agent_id, due_at)
      WHERE due_at IS NOT NULL AND completed_at IS NULL;
  '''
}

Enum note_category {
  general
  maintenance
  pest_control
  inspection
  compliance
}

// ---------------------------------------------------------------------------
// Relationships. Declared standalone so each carries its ON DELETE action.
// ---------------------------------------------------------------------------

// RESTRICT: an agent holding properties cannot be deleted. Cascading would
// destroy a portfolio; SET NULL would orphan it. Reassignment must be explicit.
Ref: property.agent_id > agent.id [delete: restrict]

// SET NULL: the property outlives the tenancy ending.
// One-to-one because property.family_id is UNIQUE (a family occupies at
// most one current property). DBML reads the SECOND column of a `-` Ref as
// the foreign key, so family.id must come first - reversed, this would
// make family.id reference property.family_id instead.
Ref: family.id - property.family_id [delete: set null]

// CASCADE: tenants have no meaning without their family.
Ref: tenant.family_id > family.id [delete: cascade]

// RESTRICT: preserve authorship.
Ref: note.agent_id > agent.id [delete: restrict]

// CASCADE: property-specific notes die with the property.
Ref: note.property_id > property.id [delete: cascade]
